--- a/jucsemylib/www/signUp.html
+++ b/jucsemylib/www/signUp.html
@@ -9,10 +9,14 @@
     </head>
 
     <body>
+	<div class="header">
+	<p><b>JU CSE MyLib SignUp</b></p>
+	</div>
+	<br><br>
 
-	<form>
+	<form><div class="box">
 	<h1>Sign Up</h1>
-	<div class="extra-info">Fill in to start acessing the departmental library</div>
+	<div class="extra-info">Fill in to start acessing the Departmental Library</div>
 	<hr><br><br>
 
 	<label for="card-number"><b>Library Card Number</b></label>
@@ -36,20 +40,7 @@
 
 	<br>
 	<button type="submit" class="signupbtn">Sign Up</button>
-	</form>
-
-
-
-
-
-
-
-
-
-
-
-
-
+	</div></form>
 
     </body>
 </html>
