SignUP page updated

--- a/jucsemylib/www/signUp.html
+++ b/jucsemylib/www/signUp.html
@@ -9,36 +9,27 @@
     </head>
 
     <body>
-	<div class="header">
-	<p><b>JU CSE MyLib SignUp</b></p>
-	</div>
-	<br><br>
+	<div class="header">JU CSE MyLib SignUp</div>
 
 	<form><div class="box">
 	<h1>Sign Up</h1>
-	<div class="extra-info">Fill in to start acessing the Departmental Library</div>
-	<hr><br><br>
+	<div class="extra-info">Fill in to start acessing the Library</div>
+	<hr>
 
-	<label for="card-number"><b>Library Card Number</b></label>
-	<br>
-    	<input type="text" placeholder="Enter card number" name="card-number" required>
-	<br><br>
+	<label for="card-number"><b>Library Card Number</b></label><br>
+    	<input type="text" placeholder="Enter card number" name="card-number" required><br>
 
-	 <label for="psw"><b>Password</b></label>
-	<br>
-	<input type="password" placeholder="Enter Password" name="psw" required>
-	<br><br>
+	 <label for="psw"><b>Password</b></label><br>
+	<input type="password" placeholder="Enter Password" name="psw" required><br>
 
-	<label for="psw-confirm"><b>Confirm Password</b></label>
-	<br>
-	<input type="password" placeholder="Confirm Password" name="psw-confirm" required>
-	<br><br>
+	<label for="psw-confirm"><b>Confirm Password</b></label><br>
+	<input type="password" placeholder="Confirm Password" name="psw-confirm" required><br>
 
 	<label>
 	<input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
 	</label>
 
-	<br>
+	<br><br>
 	<button type="submit" class="signupbtn">Sign Up</button>
 	</div></form>
 
