--- a/jucsemylib/www/index.html
+++ b/jucsemylib/www/index.html
@@ -6,12 +6,15 @@
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+	<link rel="stylesheet" href="css/index.css">
         <title>JU-CSE-MyLib</title>
     </head>
     <body>
+	<div class="bg">
         <button id="tempLoginButton" onclick="window.location.href='login.html';">Login</button>
         <button id="tempSignupButton" onclick="window.location.href='signUp.html';">Signup</button>
         <button id="tempHomePageButton" onclick="window.location.href='home.html';">Home</button>
+	</div>	
     </body>
 </html>
  
