--- a/jucsemylib/www/login.html
+++ b/jucsemylib/www/login.html
@@ -23,7 +23,7 @@
   		</div>
 
   		<div class="container" style="background-color:#f1f1f1">
-    		<span class="psw">Forgot <a href="#">password?</a></span>
+    		<span class="psw">Forgot <a href='forgetpasword.html';">password?</a></span>
   		</div>
 	</form>
 
