--- a/jucsemylib/www/home.html
+++ b/jucsemylib/www/home.html
@@ -3,9 +3,6 @@
     <head>
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/home.css">
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-        <script type="text/javascript" src="js/home.js"></script>
         <title>JU-CSE-MyLib</title>
     </head>
     <body>
@@ -24,5 +21,11 @@
             </div>
             <div id="topBarHome">Home</div>
         </div>
+        <div id="content">
+            
+        </div>
+        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+        <script type="text/javascript" src="js/home.js"></script>
     </body>
 </html>
