Load login page using app routing

--- a/jucsemylib/www/home.html
+++ b/jucsemylib/www/home.html
@@ -22,7 +22,7 @@
             <div id="topBarHome">Home</div>
         </div>
         <div id="content">
-            
+            <!--content loads here-->
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
