--- a/jucsemylib/www/signUp.html
+++ b/jucsemylib/www/signUp.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-	<div class="header">JU CSE MyLib SignUp</div>
+	<!--<div class="header">JU CSE MyLib SignUp</div>!-->
 
 	<form><div class="box">
 	<h1>Sign Up</h1>
@@ -33,5 +33,9 @@
 	<button type="submit" class="signupbtn">Sign Up</button>
 	</div></form>
 
+	<script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="js/signUp.js"></script>
     </body>
+	
 </html>
