--- a/jucsemylib/www/home.html
+++ b/jucsemylib/www/home.html
@@ -28,5 +28,6 @@
         <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
         <script type="text/javascript" src="js/home.js"></script>
 		<script type="text/javascript" src="js/signUp.js"></script>
+        <script type="text/javascript" src="js/login.js"></script>
     </body>
 </html>
