forget password single page

--- a/jucsemylib/www/login.html
+++ b/jucsemylib/www/login.html
@@ -22,9 +22,16 @@
     		</label>
   		</div>
 
-  		<div class="container" style="background-color:#f1f1f1">
+  		<!--<div class="container" style="background-color:#f1f1f1">
     		<span class="psw">Forgot <a href='forgetpasword.html';">password?</a></span>
-  		</div>
+  		</div>-->
+      <!--navigation link-->
+      <div id="navbar">
+      <a href="#forgetpasword">Forget Password?</a>
+      </div>
+      <!-- forget password containt will be here-->
+      <div id="container"></div>
 	</form>
 </body>
+<script type="text/javascript" src="js/login.js"></script>
 </html>
