--- a/jucsemylib/www/login.html
+++ b/jucsemylib/www/login.html
@@ -8,7 +8,7 @@
 	<div id="box1">
 		<h2>Login</h2>
 	</div>
-	<form action="/action_page.php">
+	<form action="./php/login.php" method="POST">
   		<div class="container">
     		<label for="cardno"><b>CardNo</b></label>
     		<input type="text" placeholder="Enter your card No" name="uname" required>
