css in forget page

--- a/jucsemylib/www/forgetpasword.html
+++ b/jucsemylib/www/forgetpasword.html
@@ -9,11 +9,12 @@
     <div class="header">
       <h1>Forget Password</h1>
     </div>
-    <div>
-      <button id="tempLoginButton" onclick="window.location.href='login.html';">Login</button>
-      </br>
-      <button id="tempSignupButton" onclick="window.location.href='signUp.html';">Signup</button>
+    <!--navigation links-->
+    <div id="tempButton">
+      <a href="#login">Login</a>
+      <a href="#signUp">Signup</a>
     </div>
+    <div id="cont"></div>
     <div>
       <p>Please enter your email address below and we will send you information to change your password</p>
       <form action="/action_page.php">
