Added email input to signup page

--- a/jucsemylib/www/signUp.html
+++ b/jucsemylib/www/signUp.html
@@ -22,6 +22,9 @@
 			<label for="card-number"><b>Library Card Number</b></label><br>
 			<input type="text" placeholder="Enter card number" name="card-number" required><br>
 
+			<label for="email"><b>Email</b></label><br>
+			<input type="email" placeholder="Enter Email" name="email" required><br>
+
 			<label for="psw"><b>Password</b></label><br>
 			<input type="password" placeholder="Enter Password" name="psw" required><br>
 
