--- a/jucsemylib/www/index.html
+++ b/jucsemylib/www/index.html
@@ -32,6 +32,8 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/login.js"></script>
+    <script type="text/javascript" src="js/signUp.js"></script>
         
     </body>
 </html>
