--- a/jucsemylib/www/login.html
+++ b/jucsemylib/www/login.html
@@ -1,21 +1,21 @@
 <link rel="stylesheet" type="text/css" href="css/login.css">
-<div id="box1">
-	<h2>Login</h2>
-</div>
+
 <form name="loginForm" onsubmit="return login(document.loginForm.uname.value,document.loginForm.psw.value);">
-	<div class="container">
-		<label for="cardno"><b>CardNo</b></label>
-		<input type="text" placeholder="Enter your card No" name="uname" required>
+    <h2>Login</h2>
+    <div class="container">
+        <label for="cardno"><b>CardNo</b></label>
+        <input type="text" placeholder="Enter your card No" name="uname" required>
 
-		<label for="psw"><b>Password</b></label>
-		<input type="password" placeholder="Enter Password" name="psw" required>
+        <label for="psw"><b>Password</b></label>
+        <input type="password" placeholder="Enter Password" name="psw" required>
 
-		<button type="submit">Login</button>
-		<label>
+        <button type="submit">Login</button>
+        <label>
 			<input type="checkbox" checked="checked" name="remember"> Remember me
 		</label>
-	</div>
-	<div class="container" style="background-color:#f1f1f1">
-		<span class="psw"><a href='forgetpasword.html'>Forgot password?</a></span>
-	</div>
+    </div>
+
 </form>
+<br>
+<span><a class="signup" href='forgetpasword.html'>Forgot password?</a></span><br>
+<div><a class="signup" href='signUp.html'>New? SignUp here</a> </div>
