--- a/jucsemylib/www/homescreen.html
+++ b/jucsemylib/www/homescreen.html
@@ -7,19 +7,19 @@
 
 <!--Displays basic info-->
 <div class="info">
-	<div id="name">Mr Ashutosh Chatterjee</div>
-	<div id="designation">CSE Department</div><br><br>
+    <div id="name">Mr Ashutosh Chatterjee</div>
+    <div id="designation">CSE Department</div><br><br>
 </div>
 
 <!--Shows number books issued-->
 <!--<i class="fa fa-angle-double-right">-->
 <div class="book_info">
-	<h2>
-		<span id="num">0</span>
-	</h2>/2
+    <h2>
+        <span id="num">0</span>
+    </h2>/2
 </div>
 <div class="extra_info">Books Issued</div>
 
 <!--Shows the nearest returning date-->
 <br><br><br>
-<div class="reminder">12 Books will be returned tomorrow </div>
+<div class="reminder" type="button" onclick="loadSearch()">Issue Book? </div>
