--- a/jucsemylib/www/index.html
+++ b/jucsemylib/www/index.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>Library</title>
-    </head>
-    <body>
-        <div id="sidenav">
-            <div class="sidenavItems" id="hideSidenavButton" onclick="hideSidenav()">&times;</div>
-            <div class="sidenavItems" onclick="loadPage('homescreen','Home')">Home</div>
-            <div class="sidenavItems" onclick="loadPage('checkBookStatus','Search A Book')">Check Book Status</div>
-            <div class="sidenavItems" onclick="loadPage('issueBook','Issue Book')">Issue Book</div>
-            <div class="sidenavItems" onclick="loadPage('returnBook','Return Book')">Return Book</div>
-            <div class="sidenavItems" onclick="loadPage('reportDamage','Report Damage/Lost')">Report Damaga/Lost</div>
-        </div>
-        <div id="topBar">
-            <div id="menuIcon" onclick="showSidenav()">
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-            <div id="topBarHome">Home</div>
-        </div>
-        <div id="content">
-            <!--content loads here-->
-        </div>
 
-    
+<head>
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <title>Library</title>
+</head>
+
+<body>
+    <div id="sidenav">
+        <div class="sidenavItems" id="hideSidenavButton" onclick="hideSidenav()">&times;</div>
+        <div class="sidenavItems" onclick="loadHome(localStorage.getItem('user_data'))">Home</div>
+        <div class="sidenavItems" onclick="loadPage('issueBook','Issue Book')">Issue Book</div>
+        <div class="sidenavItems" onclick="loadPage('returnBook','Return Book')">Return Book</div>
+        <div class="sidenavItems" onclick="loadPage('reportDamage','Report Damage/Lost')">Report Damaga/Lost</div>
+        <div class="sidenavItems" onclick="logout()">Log Out</div>
+    </div>
+    <div id="topBar">
+        <div id="menuIcon" onclick="showSidenav()">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div id="topBarHome">Home</div>
+    </div>
+    <div id="content">
+        <!--content loads here-->
+    </div>
+
+
     </script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/login.js"></script>
     <script type="text/javascript" src="js/signUp.js"></script>
-        
-    </body>
+    <script type="text/javascript" src="js/homescreen.js"></script>
+
+</body>
+
 </html>
