--- a/jucsemylib/www/login.html
+++ b/jucsemylib/www/login.html
@@ -5,7 +5,7 @@
 	<div id="box1">
 		<h2>Login</h2>
 	</div>
-	<form action="/action_page.php">
+	<form method="POST",action="/login.php">
   		<div class="container">
     		<label for="cardno"><b>CardNo</b></label>
     		<input type="text" placeholder="Enter your card No" name="uname" required>
