--- a/jucsemylib/www/signUp.html
+++ b/jucsemylib/www/signUp.html
@@ -1,41 +1,30 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-        <title>JU-CSE-MyLib-SIgnUp</title>
-	<link rel="stylesheet" href="css/signUp.css">
-    </head>
+<link rel="stylesheet" href="css/signUp.css">
+<form name="signupForm" onsubmit="return signUp(document.signupForm.cardnumber.value,document.signupForm.name.value,document.signupForm.course.value,document.signupForm.psw.value,document.signupForm.pswconfirm.value);">
+	<div class="box">
+		<h1>Sign Up</h1>
+		<div class="extra-info">Fill in to start acessing the Library</div>
+		<hr>
 
-    <body>
-	<!--<div class="header">JU CSE MyLib SignUp</div>!-->
+		<label for="cardnumber"><b>Library Card Number</b></label><br>
+		<input type="text" placeholder="Enter card number" name="cardnumber" required><br>
 
-	<form><div class="box">
-	<h1>Sign Up</h1>
-	<div class="extra-info">Fill in to start acessing the Library</div>
-	<hr>
+		<label for="name"><b>Name</b></label><br>
+		<input type="text" placeholder="Enter your name" name="name" required><br>
 
-	<label for="card-number"><b>Library Card Number</b></label><br>
-    	<input type="text" placeholder="Enter card number" name="card-number" required><br>
+		<label for="course"><b>Course</b></label><br>
+		<input type="text" placeholder="Enter course" name="course" required><br>
 
-	 <label for="psw"><b>Password</b></label><br>
-	<input type="password" placeholder="Enter Password" name="psw" required><br>
+		<label for="psw"><b>Password</b></label><br>
+		<input type="password" placeholder="Enter Password" name="psw" required><br>
 
-	<label for="psw-confirm"><b>Confirm Password</b></label><br>
-	<input type="password" placeholder="Confirm Password" name="psw-confirm" required><br>
+		<label for="pswconfirm"><b>Confirm Password</b></label><br>
+		<input type="password" placeholder="Confirm Password" name="pswconfirm" required><br>
 
-	<label>
-	<input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-	</label>
+		<label>
+			<input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+		</label>
 
-	<br><br>
-	<button type="submit" class="signupbtn">Sign Up</button>
-	</div></form>
-
-	<script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="js/signUp.js"></script>
-    </body>
-	
-</html>
+		<br><br>
+		<button type="submit" class="signupbtn">Sign Up</button>
+	</div>
+</form>
