--- a/jucsemylib/www/login.html
+++ b/jucsemylib/www/login.html
@@ -18,4 +18,4 @@
 </form>
 <br>
 <span><a class="signup" href='forgetpasword.html'>Forgot password?</a></span><br>
-<div><a class="signup" href='signUp.html'>New? SignUp here</a> </div>
+<div><a class="signup" onclick="loadPage('signUp','Sign Up')">New? SignUp here</a> </div>
