--- a/jucsemylib/www/forgetpasword.html
+++ b/jucsemylib/www/forgetpasword.html
@@ -7,13 +7,13 @@
   <div id="cont"></div>
   <div>
     <p>Please enter your email address below and we will send you information to change your password</p>
-    <form name="forgetFrom" onsubmit="return false">
+    <form name="forgetForm" onsubmit="return false">
     <div class="from-container">
       <label for="cardno"><b>CardNo</b></label>
       <input type="text" placeholder="Enter your card No" name="uname" required>
       <label for="psw"><b>Email</b></label>
       <input type="email" placeholder="Enter Your Email" name="psw" required>
-      <button type="submit" onclick="return forget(document.forgetForm.psw.value);">Reset</button>
+      <button type="submit" onclick="return forget(document.forgetForm.cardno.value,document.forgetForm.psw.value);">Reset</button>
     </div>
   </div>
 </div>
