adding forget password

--- a/jucsemylib/www/forgetpasword.html
+++ b/jucsemylib/www/forgetpasword.html
@@ -1,4 +1,3 @@
-
 <link rel="stylesheet" href="css/forgetpasword.css">
 <div class="continer">
   <div class="header">
@@ -15,5 +14,6 @@
       <input type="email" placeholder="Enter Your Email" name="psw" required>
       <button type="submit" onclick="return forget(document.forgetForm.cardno.value,document.forgetForm.psw.value);">Reset</button>
     </div>
+    </form>
   </div>
 </div>
