--- a/jucsemylib/www/index.html
+++ b/jucsemylib/www/index.html
@@ -3,7 +3,8 @@
 <html>
 
 <head>
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+    <meta name="viewport"
+        content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <title>Library</title>
 </head>
@@ -12,9 +13,8 @@
     <div id="sidenav">
         <div class="sidenavItems" id="hideSidenavButton" onclick="hideSidenav()">&times;</div>
         <div class="sidenavItems" onclick="loadHome(localStorage.getItem('user_data'))">Home</div>
-        <div class="sidenavItems" onclick="loadPage('issueBook','Issue Book')">Issue Book</div>
+        <div class="sidenavItems" onclick="loadSearch()">Issue Book</div>
         <div class="sidenavItems" onclick="loadPage('returnBook','Return Book')">Return Book</div>
-        <div class="sidenavItems" onclick="loadPage('reportDamage','Report Damage/Lost')">Report Damaga/Lost</div>
         <div class="sidenavItems" onclick="logout()">Log Out</div>
     </div>
     <div id="topBar">
@@ -36,7 +36,8 @@
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/login.js"></script>
     <script type="text/javascript" src="js/signUp.js"></script>
-    <script type="text/javascript" src="js/homescreen.js"></script>
+    <script type="text/javascript" src="js/search.js"></script>
+    <script type="text/javascript" src="js/forget.js"></script>
 
 </body>
 
