--- a/jucsemylib/www/forgetpasword.html
+++ b/jucsemylib/www/forgetpasword.html
@@ -9,10 +9,10 @@
     <form name="forgetForm" onsubmit="return false">
     <div class="from-container">
       <label for="cardno"><b>CardNo</b></label>
-      <input type="text" placeholder="Enter your card No" name="uname" required>
+      <input type="text" placeholder="Enter your card No" name="crdno" required>
       <label for="psw"><b>Email</b></label>
-      <input type="email" placeholder="Enter Your Email" name="psw" required>
-      <button type="submit" onclick="return forget(document.forgetForm.cardno.value,document.forgetForm.psw.value);">Reset</button>
+      <input type="email" placeholder="Enter Your Email" name="email" required>
+      <button type="submit" onclick="return forget(document.forgetForm.crdno.value,document.forgetForm.email.value);">Reset</button>
     </div>
     </form>
   </div>
