admin_side login page added

--- a/admin_side/homescreen.html
+++ b/admin_side/homescreen.html
@@ -2,7 +2,7 @@
 <link href="https://fonts.googleapis.com/css?family=Arvo|Roboto" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <br><br>
-<img id="pro_pic" class="double_border" src="./img/dummy_avatar.jpg">
+<img id="pro_pic" class="double_border" src="./img/img_avatar2.png">
 <br><br>
 
 <!--Displays basic info-->
