--- a/admin_side/login.html
+++ b/admin_side/login.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="css/login.css">
 
-<form name="loginForm" onsubmit="return login(document.loginForm.psw.value,document.loginForm.remember.checked)">
+<form name="loginForm" onsubmit="return false">
     <div class="imgcontainer">
         <img src="./img/img_avatar2.png" alt="Avatar" class="avatar">
     </div>
@@ -10,15 +10,14 @@
         <label for="psw"><b>Password</b></label><br>
         <input type="password" placeholder="Enter Password" name="psw" required><br><br>
 
-        <button type="submit" ); ">Login</button>
+        <button type="submit" onclick="return login(document.loginForm.psw.value,document.loginForm.remember.checked);">Login</button><br>
         <label>
-      <input type="checkbox " checked="checked " name="remember "> Remember me
+      <input type="checkbox" checked="checked" name="remember"> Remember me
     </label>
         <br><br>
-        <button type="button " class="cancelbtn ">Cancel</button>
-        <span style="display:inline-block; width: 125px; "></span>
-        <span class="psw ">Forgot <a href="# ">password?</a></span>
+        <button type="button" class="cancelbtn">Cancel</button>
+        <span style="display:inline-block; width: 125px;"></span>
+        <span class="psw">Forgot <a href="#">password?</a></span>
     </div>
 
 </form>
-<script type="text/javascript " src="js/index.js "></script>
