logged in functionality added,issue page work started

--- a/admin_side/homescreen.html
+++ b/admin_side/homescreen.html
@@ -22,4 +22,4 @@
 
 <!--Shows the nearest returning date-->
 <br><br><br>
-<div class="reminder" type="button" onclick="loadSearch()">Issue Book? </div>
+<div class="reminder" type="button" onclick="loadPage('search','Pending Issues')">Issue Book? </div>
