Things are supposed to be done BUT weird errors occuring

--- a/admin_side/index.html
+++ b/admin_side/index.html
@@ -12,7 +12,7 @@
     <div id="sidenav">
         <div class="sidenavItems" onclick="loadPage('homescreen','Home')">Home</div>
         <div class="sidenavItems" onclick="loadPage('search','Pending Issues')">Issue Book</div>
-        <div class="sidenavItems" onclick="loadPage('returnBook','Return Book')">Return Book</div>
+        <div class="sidenavItems" onclick="loadPage('search','Pending Returns')">Return Book</div>
         <div class="sidenavItems" onclick="logout()">Log Out</div>
     </div>
     <div id="topBar">
@@ -26,7 +26,6 @@
     </script>
     <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
-    <script type="text/javascript" src="js/search.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 
