--- a/jucsemylib/www/index.html
+++ b/jucsemylib/www/index.html
@@ -38,6 +38,8 @@
     <script type="text/javascript" src="js/signUp.js"></script>
     <script type="text/javascript" src="js/search.js"></script>
     <script type="text/javascript" src="js/forget.js"></script>
+    <script type="text/javascript" src="js/otp.js"></script>
+    <script type="text/javascript" src="js/password.js"></script>
 
 </body>
 
