--- a/admin_side/homescreen.html
+++ b/admin_side/homescreen.html
@@ -2,12 +2,12 @@
 <link href="https://fonts.googleapis.com/css?family=Arvo|Roboto" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <br><br>
-<img id="pro_pic" class="double_border" src="./img/img_avatar2.png">
+<img id="pro_pic" class="double_border" src="./img/flat-icon-library-17.jpg">
 <br><br>
 
 <!--Displays basic info-->
 <div class="info">
-    <div id="name">Chris Hemsworth</div>
+    <div id="name">Jadavpur University</div>
     <div id="designation">CSE Department</div><br><br>
 </div>
 
