--- a/admin_side/login.html
+++ b/admin_side/login.html
@@ -2,7 +2,7 @@
 
 <form name="loginForm" onsubmit="return false">
     <div class="imgcontainer">
-        <img src="./img/img_avatar2.png" alt="Avatar" class="avatar">
+        <img src="./img/flat-icon-library-17.jpg" alt="Avatar" class="avatar">
     </div>
 
     <div class="container">
