Book adding functionality added to admin side

--- a/admin_side/index.html
+++ b/admin_side/index.html
@@ -13,6 +13,7 @@
         <div class="sidenavItems" onclick="loadPage('homescreen','Home')">Home</div>
         <div class="sidenavItems" onclick="loadPage('search','Pending Issues')">Issue Book</div>
         <div class="sidenavItems" onclick="loadPage('search','Pending Returns')">Return Book</div>
+        <div class="sidenavItems" onclick="loadPage('add','Add Books')">Add Book</div>
         <div class="sidenavItems" onclick="logout()">Log Out</div>
     </div>
     <div id="topBar">
